--- a/views/index.html
+++ b/views/index.html
@@ -6,21 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
-    <title>Home</title>
+    <title>go-htmx</title>
+    <style>
+        @keyframes fade-in {
+            from {
+                opacity: 0;
+            }
+        }
+
+        @keyframes fade-out {
+            to {
+                opacity: 0;
+            }
+        }
+
+        @keyframes slide-from-right {
+            from {
+                transform: translateX(90px);
+            }
+        }
+
+        @keyframes slide-to-left {
+            to {
+                transform: translateX(-90px);
+            }
+        }
+
+        .slide-it {
+            view-transition-name: slide-it;
+        }
+
+        ::view-transition-old(slide-it) {
+            animation: 180ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+                600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+        }
+
+        ::view-transition-new(slide-it) {
+            animation: 420ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+                600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="flex justify-center items-center h-screen" hx-post="/clicked" hx-swap="outerHTML">
-        <div class="flex items-center text-4xl font-bold shadow-lg py-3 px-5 rounded-full">
-            <h1 class="">This page was made with-</h1>
-            <h3 class="text-sky-500 hover:scale-105 ease-out duration-500">Tailwind</h3>.
-            <h3 class="text-blue-500 hover:scale-105 ease-out duration-500">CSS</h3>.
-            <h3 class="text-blue-800 hover:scale-105 ease-out duration-500">HTMX</h3>.
-            <h3 class="text-[#29beb0] hover:scale-105 ease-out duration-500">GO</h3>
-        </div>
+    <div class="w-full p-4 text-xl shadow-md py-7">
+        <ul class="flex justify-between">
+            <li class="mr-6">
+                <a class="text-blue-500 hover:text-blue-800 font-bold" hx-get="/home"
+                    hx-swap="innerHTML transition:true" hx-target="#body">go-htmx</a>
+            </li>
+            <div class="flex justify-between">
+                <li class="mr-6">
+                    <a class="text hover:text-red-800 font-bold" hx-get="/logs" hx-swap="innerHTML transition:true"
+                        hx-target="#body">Logs</a>
+                </li>
+                <li class="mr-6">
+                    <a class="text hover:text-red-800 font-bold" hx-get="/about" hx-swap="innerHTML transition:true"
+                        hx-target="#body">About</a>
+                </li>
+            </div>
+        </ul>
     </div>
-    
-
+    <div id="body" class="p-10" hx-get="/home" hx-trigger="load"></div>
 </body>
 
 </html>
